<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WifiRC</string>
    <string name="action_settings">Settings</string>
    <string name="forward_button">FORWARD</string>
    <string name="reverse_button">REVERSE</string>
    <string name="stop_button">STOP</string>
    <string name="exit_button">EXIT</string>
    <string name="right_button">RIGHT</string>
    <string name="left_button">LEFT</string>
    <string name="honk_button">HONK</string>
    <string name="fire_button">FIRE</string>
    <string name="title_activity_gui">GuiActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_message">Enter your EV3\'s IP</string>
    <string name="enter_button">Enter</string>

</resources>
